--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="header-round-info-container">
         <div class="header-img-container">
-          <img src="/images/A.png" alt="" class="header-img" />
+          <img src="images/A.png" alt="Ace" class="header-img" />
         </div>
         <div class="header-score-container">
           <h2 class="score">Score&nbsp;<span class="badge">0</span></h2>
